[package]
name = "plumber-cli"
version = "0.2.1"
authors = ["Maxi Saparov"]
keywords = ["pipe", "pipeline"]
categories = ["command-line-utilities"]
license = "MIT"
description = "unix process pipelines made easy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "plumber"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
nix = { version = "0.27.1", features = ["signal"] }
rand = "0.8.5"
shlex = "1.2.0"
signal-hook = "0.3.17"
