[package]
name = "plumber-cli"
version = "0.3.1"
authors = ["Maxi Saparov"]
keywords = ["pipe", "pipeline"]
categories = ["command-line-utilities"]
license = "MIT"
description = "unix process pipelines made easy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "plumber"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
env_logger = "0.10.0"
log = "0.4.20"
shlex = "1.2.0"
