[package]
name = "plumber-cli"
version = "0.4.2"
repository = "https://github.com/MostlyMax/plumber"
documentation = "https://docs.rs/plumber-cli"
authors = ["Maxi Saparov"]
keywords = ["pipe", "pipeline"]
categories = ["command-line-utilities"]
license = "MIT"
description = "unix process pipelines made easy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "plumber"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shlex = "1.2.0"
toml = "0.8.2"
